<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:textColor="#1B5E20"
        android:textSize="32sp"
        android:textStyle="bold"
        android:id="@+id/title_text"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:background="#C8E6C9"
        android:text="@string/btn_lbl_spotify"
        android:textSize="16sp"
        android:id="@+id/btn_one"
        android:layout_below="@id/title_text"
        android:onClick="makeToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:background="#C8E6C9"
        android:text="@string/btn_lbl_scores"
        android:textSize="16sp"
        android:id="@+id/btn_two"
        android:layout_below="@id/btn_one"
        android:onClick="makeToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:background="#C8E6C9"
        android:text="@string/btn_lbl_lib"
        android:textSize="16sp"
        android:id="@+id/btn_three"
        android:layout_below="@id/btn_two"
        android:onClick="makeToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:background="#C8E6C9"
        android:text="@string/btn_lbl_bigger"
        android:textSize="16sp"
        android:id="@+id/btn_four"
        android:layout_below="@id/btn_three"
        android:onClick="makeToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:background="#C8E6C9"
        android:text="@string/btn_lbl_reader"
        android:textSize="16sp"
        android:id="@+id/btn_five"
        android:layout_below="@id/btn_four"
        android:onClick="makeToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:background="#673AB7"
        android:textColor="#EDE7F6"
        android:textStyle="bold"
        android:text="@string/btn_lbl_capstone"
        android:textSize="16sp"
        android:id="@+id/btn_six"
        android:layout_below="@id/btn_five"
        android:onClick="makeToast" />

</RelativeLayout>